...
        course("MATM2_6B", "Mathematics II", 5, 2, CourseStatus.FULFILLED),
        course("TPAR_6B", "Technické prostriedky automatizovaného riadenia", 5, 3, CourseStatus.ENROLLED),
        course("ZAST_6B", "Základy štatistiky", 2, 3, CourseStatus.ENROLLED),
        course("ELPA_6B", "Electropneumatics in Automation", 5, 3, CourseStatus.FULFILLED),
        course("ANJA1_6B", "English Language 1", 2, 3, CourseStatus.FULFILLED),
        course("UVTM_6B", "Introduction to Technical Materials", 5, 3, CourseStatus.FULFILLED),
        course("FYZI_6B", "Fyzika", 5, 3, CourseStatus.ENROLLED),
        course("SFTE_6B", "Software Technologies", 5, 3, CourseStatus.FULFILLED),
        course("ZDTV1_6B", "Health physical education 1", 1, 3, CourseStatus.NOT_ENROLLED, CourseRequirementType.SEMI_COMPULSORY),
        course("TEVE1_6B", "Telesná výchova 1", 1, 3, CourseStatus.ENROLLED, CourseRequirementType.SEMI_COMPULSORY),
        course("AVAR_6B", "Applications in Automation and Robotics", 5, 4, CourseStatus.PLANNED),
        course("ANJA2_6B", "English language 2", 2, 4, CourseStatus.FULFILLED),
        course("ZOSM_6B", "Fundamentals of Machining and Mechanical Metrology", 5, 4, CourseStatus.PLANNED),
...
